#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Detector
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

=======
Tag: V00-03-48
2016-03-24 Mikhail S. Dubrovin
- AreaDetector - update comments for doc string.

Tag: V00-03-47
2016-03-22 Christopher O'Grady
- fix bug in exception

Tag: V00-03-46
2016-03-21 Christopher O'Grady and TJ Lane
- update doc strings

Tag: V00-03-45
2016-03-17 Mikhail S. Dubrovin
- det_ndarr_raw_proc - fix output file name substitution
- add parameter "addmetad" to save_txt, save_txtnda, save_txtdaq methods. Do not save metadata for CSPAD and CSPAD2x2.
- det_ndarr_average - change default parameters for plotim=False, verbose=False, events=10000000

Tag: V00-03-44
2016-03-15 Mikhail S. Dubrovin
- AreaDetector._shaped_array_ - exclude a bunch of detectors from re-shaping based on calib parameters (PSAS-139)

Tag: V00-03-43
2016-03-15 Christopher O'Grady
- add "name" attribute to detector so users can query the full-name of a detector

Tag: V00-03-42
2016-03-07 Mikhail S. Dubrovin
- app/det_ndarr_average - save max file w/o header for cspad2x2
- app/det_ndarr_raw_proc - make configurable output file names for calibman compatability
- add app/event_keys - for calibman

Tag: V00-03-41
2016-03-05 Mikhail S. Dubrovin
- det_ndarr_average - use det.save_txtnda and det.save_asdaq
	
Tag: V00-03-40
2016-02-25 Mikhail S. Dubrovin
- exteld det_ndarr_raw_proc for case of many sources
	
Tag: V00-03-39
2016-02-24 Mikhail S. Dubrovin
- add AreaDetector.save_asdaq, update examples, app/det_ndarr_raw_proc (PSAS-139)

Tag: V00-03-38
2016-02-22 Mikhail S. Dubrovin
- AreaDetector.py, PyDetectorAccess.py - add methods save_txtnda, load_txtnda (PSAS-139)
- add ex_save_load_nda.py, update ex_all_dets.py
