@@ -1,0 +1,6 @@
+# TITLE      DEFAULT geometry parameters of Epix100a
+# DETECTOR   Epix100a
+# CALIB_TYPE geometry
+
+# HDR PARENT IND        OBJECT IND     X0[um]   Y0[um]   Z0[um]   ROT-Z ROT-Y ROT-X     TILT-Z   TILT-Y   TILT-X
+IP             0    EPIX100:V1   0          0        0  1000000       0     0     0    0.00000  0.00000  0.00000
