@@ -16,7 +16,11 @@ print 'Test # %d' % ntest
 dsname, src                  = 'exp=cxif5315:run=169', 'CxiDs2.0:Cspad.0'
 if   ntest==2  : dsname, src = 'exp=meca1113:run=376', 'MecTargetChamber.0:Cspad2x2.1'
 elif ntest==3  : dsname, src = 'exp=amob5114:run=403', 'Camp.0:pnCCD.0'
-elif ntest==4  : dsname, src = 'exp=xppi0614:run=74',  'NoDetector.0:Epix100a.0'
+elif ntest==4  : #dsname, src = 'exp=xppi0614:run=74',  'NoDetector.0:Epix100a.0'
+    dsname, src = '/reg/g/psdm/detector/data_test/types/0007-NoDetector.0-Epix100a.0.xtc', 'NoDetector.0:Epix100a.0'
+    psana.setOption('psana.calib-dir', '/reg/g/psdm/detector/alignment/epix100/xpp-epix100a-2014-12-04/calib')
+    #psana.setOption('psana.calib-dir', './calib')
+
 elif ntest==5  : dsname, src = 'exp=sxrg3715:run=46',  'SxrEndstation.0:Andor.2'
 elif ntest==6  : dsname, src = 'exp=sxrf9414:run=72',  'SxrEndstation.0:Fccd960.0'
 elif ntest==7  : dsname, src = 'exp=xcsi0112:run=15',  'XcsBeamline.0:Princeton.0'
@@ -43,12 +47,12 @@ elif ntest==20 :   #The same as 'exp=cxif5315:run=169' but geometry is different
     dsname, src = '/reg/g/psdm/detector/data_test/types/0003-CxiDs2.0-Cspad.0-fiber-data.xtc',  'CxiDs2.0:Cspad.0'
     psana.setOption('psana.calib-dir', '/reg/g/psdm/detector/alignment/cspad/calib-cxi-camera2-2015-01-20/calib')
 
-elif ntest==21  : # dsname, src = 'exp=sxrk4816:run=3',  'SxrEndstation.0:DualAndor.0'
+elif ntest==21 : # dsname, src = 'exp=sxrk4816:run=3',  'SxrEndstation.0:DualAndor.0'
     dsname = '/reg/g/psdm/detector/data_test/types/0005-SxrEndstation.0-DualAndor.0.xtc' # exp=sxrk4816:run=3
     src = 'SxrEndstation.0:DualAndor.0'# or alias='andorDual'
     psana.setOption('psana.calib-dir', '/reg/g/psdm/detector/alignment/andor3d/calib-andor3d-2016-02-09/calib')
 
-elif ntest==22  : # dsname, src = 'exp=sxrk4816:run=7',  'SxrEndstation.0:DualAndor.0'
+elif ntest==22 : # dsname, src = 'exp=sxrk4816:run=7',  'SxrEndstation.0:DualAndor.0'
     dsname = '/reg/g/psdm/detector/data_test/types/0006-SxrEndstation.0-DualAndor.0.xtc' # exp=sxrk4816:run=7
     src = 'SxrEndstation.0:DualAndor.0'# or alias='andorDual'
     psana.setOption('psana.calib-dir', '/reg/g/psdm/detector/alignment/andor3d/calib-andor3d-2016-02-09/calib')
